--- a/main.html
+++ b/main.html
@@ -4,13 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Night Life</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous" defer></script>
+    <script src="app.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <title>Serenity</title>
 </head>
 <body>
-    <main class="landing">
-        <h1 id="logo"></h1>
-    </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous">
-    </script>
+        <div id="progress_bar"></div>
+        <div id="scrollPath"></div>
+        <nav>
+            <h1> <a class="logo" href="#">serenity</a></h1>
+            <ul class="nav-links">
+                <div class="login">
+                    <a id="login" href="login.html">Login</a>
+                    <a href="#">Sign up</a>
+                </div>
+            </ul>
+        </nav>
+        <div class="landing">
+            <div class="landing-main-area">
+                <h2 class="big-text">Share Your Memories</h2>
+                <p class="subtitle">Gather your moments in one place. Share, deliver and cherish </p>
+                <button class="landing-section-button" >Get Started</button>
+            </div>
+            <i class="arrow down"><link href="#test-section"></i>
+        </div>
+    <div class="intro">
+        <div class="intro-text">
+            <h1 class="hide">
+                <span class="text"> Capture the moment</span>
+            </h1>
+            <h1 class="hide">
+                <span class="text"> Treasure it</span>
+            </h1>
+            <h1 class="hide">
+                <span class="text"> And immortalize it</span>
+            </h1>
+        </div>
+    </div>
+        <div class="slider">
+            <!-- <h1 class="slider-text">
+                Mohamed SK
+            </h1> -->
+        </div>
+        <div class="relive" id="relive">
+            <div class="left">
+                <div class="left-contents">
+                    <h1>Relive your memories</h1>
+                    <p>Create your gallery in minutes. Revisit your favorite photos and videos anytime on any device</p>
+                    <button class="relive-button">Get Started</button>
+                </div>
+
+            </div>
+            <div class="right">
+                <h2>Under Work</h2>
+            </div>
+        </div>
 </body>
 </html>
